fix: z-index 999

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 100%; 
+  z-index: 999; 
 }
   
 .loading-video-container video {
